add cleanup workflow

--- a/.github/workflows/arm64-native-cleanup.yml
+++ b/.github/workflows/arm64-native-cleanup.yml
@@ -14,4 +14,4 @@ jobs:
           curl -X POST https://api.github.com/repos/bbqwednesday/terraform-cloud/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
           -u ${{ secrets.ACCESS_TOKEN }} \
-          --data '{"event_type": "destroy '"$GITHUB_REPOSITORY"'", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
+          --data '{"event_type": "destroy '"$GITHUB_REPOSITORY"' dynamic-tf-oci-arm64-runner", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
